--- a/css/index.css
+++ b/css/index.css
@@ -31,6 +31,23 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+header img{
+    margin:2%;
+}
+header {
+    
+    margin-bottom: 3%;
+}
+header nav{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 3%;
+}
+nav a{
+    margin-top: 3%;
+    text-decoration: none;
+    color: black;
+}
 ol, ul {
 	list-style: none;
 }
@@ -144,6 +161,28 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+.aboutSection {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 2% 2%;
+}
+.mainContent {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+} 
+.strategyText {
+    flex-basis:45%;
+}
+.howText {
+    flex-basis:45%;
+}
+.placesText {
+    flex-basis:45%;
+}
+.collabText {
+    flex-basis:45%;
+}
 #boxOne{
     background-color: teal;
 }
@@ -158,4 +197,49 @@ footer nav a {
 }
 #boxFive {
     background-color: crimson;
+}
+#boxSix {
+    background-color: forestgreen;
+}
+#boxSeven {
+    background-color: darkorchid;
+}
+#boxEight {
+    background-color: hotpink;
+}
+#boxNine {
+    background-color: indigo;
+}
+#boxTen {
+    background-color: dodgerblue;
+}
+
+
+
+hr {
+    border:none;
+    border-top:1px dashed black;
+    color:#fff;
+    background-color:#fff;
+    height:1px;
+    width: 100%;
+    margin-bottom: 3%;
+    text-align: center
+  }
+  button {
+    border: 3px solid black; 
+    margin-left: 2%;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    border-radius: 20px;
+    width: 35%;
+    cursor: pointer;
+    padding: 4%;
+}
+h3{
+margin-bottom: 2%;
+margin-top: 2%;
+}
+.lastSection{
+    margin-bottom: 3%;
 }
